--- a/index.html
+++ b/index.html
@@ -14,18 +14,14 @@
     body {
       margin: 0;
       overflow: hidden;
-      background: #1a1a1a;
+      background: #0d0d1a;
       font-family: 'Courier New', monospace;
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
       min-height: 100vh;
-    }
-
-    canvas {
-      display: block;
-      border: 2px solid #333;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
+      color: #e5e5e5;
     }
 
     #game-container {
@@ -33,8 +29,41 @@
     }
 
     #loading {
-      color: #fff;
+      color: #4ade80;
       font-size: 18px;
+      padding: 20px;
+    }
+
+    canvas {
+      display: block;
+      border: 2px solid #1f2937;
+      border-radius: 4px;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.6);
+    }
+
+    #controls {
+      margin-top: 16px;
+      font-size: 12px;
+      color: #6b7280;
+      display: flex;
+      gap: 24px;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+
+    #controls span {
+      display: inline-flex;
+      align-items: center;
+      gap: 4px;
+    }
+
+    kbd {
+      background: #1f2937;
+      border: 1px solid #374151;
+      border-radius: 3px;
+      padding: 2px 6px;
+      font-size: 11px;
+      color: #9ca3af;
     }
   </style>
 </head>
@@ -42,6 +71,12 @@
   <div id="game-container">
     <div id="loading">Loading Signal Path...</div>
     <canvas id="gameCanvas"></canvas>
+  </div>
+  <div id="controls">
+    <span><kbd>↑</kbd><kbd>↓</kbd><kbd>←</kbd><kbd>→</kbd> or <kbd>WASD</kbd> Move</span>
+    <span><kbd>SPACE</kbd> Wait</span>
+    <span><kbd>R</kbd> Restart</span>
+    <span><kbd>N</kbd>/<kbd>P</kbd> Next/Prev Level</span>
   </div>
   <script type="module" src="/src/ui/main.ts"></script>
 </body>
