--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     body {
       margin: 0;
       overflow: hidden;
-      background: #0d0d1a;
+      background: #000000;
       font-family: 'Courier New', monospace;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       min-height: 100vh;
-      color: #e5e5e5;
+      color: #ffffff;
     }
 
     #game-container {
@@ -29,26 +29,30 @@
     }
 
     #loading {
-      color: #4ade80;
-      font-size: 18px;
-      padding: 20px;
+      color: #00ff88;
+      font-size: 22px;
+      padding: 25px;
+      text-transform: uppercase;
+      letter-spacing: 2px;
     }
 
     canvas {
       display: block;
-      border: 2px solid #1f2937;
-      border-radius: 4px;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.6);
+      border: 2px solid #0088cc;
+      border-radius: 2px;
+      box-shadow: 0 0 20px rgba(0, 204, 255, 0.3), 0 0 60px rgba(0, 204, 255, 0.1);
     }
 
     #controls {
-      margin-top: 16px;
-      font-size: 12px;
-      color: #6b7280;
+      margin-top: 20px;
+      font-size: 15px;
+      color: #555577;
       display: flex;
-      gap: 24px;
+      gap: 30px;
       justify-content: center;
       flex-wrap: wrap;
+      text-transform: uppercase;
+      letter-spacing: 1px;
     }
 
     #controls span {
@@ -58,12 +62,12 @@
     }
 
     kbd {
-      background: #1f2937;
-      border: 1px solid #374151;
-      border-radius: 3px;
-      padding: 2px 6px;
-      font-size: 11px;
-      color: #9ca3af;
+      background: #0a0a18;
+      border: 1px solid #1a1a3a;
+      border-radius: 2px;
+      padding: 3px 8px;
+      font-size: 14px;
+      color: #00ccff;
     }
   </style>
 </head>
